@startuml Class_Diagram
skinparam classAttributeIconSize 0
skinparam monochrome true
skinparam linetype ortho

package "User & Auth" {
  class Customer {
    -Integer customerId
    -String name
    -String email
    -String passwordHash
    -String phone
    -String address
    -String nationalId
    -String driverLicense
    -LocalDate licenseExpiry
    -Boolean active
  }

  class Manager {
    -Integer managerId
    -String username
    -String passwordHash
    -String role
  }
}

package "Fleet & Asset" {
  class Vehicle {
    -Integer vehicleId
    -String licensePlate
    -String brand
    -String model
    -Integer yearMade
    -String color
    -BigDecimal dailyRate
    -Status status
  }

  class VehicleType {
    -Integer typeId
    -String typeName
    -String description
  }

  class Location {
    -Integer locationId
    -String address
    -String city
    -String country
    -String phone
    -String managerName
  }

  class MaintenanceLog {
    -Integer logId
    -LocalDate maintenanceDate
    -String description
    -BigDecimal cost
  }
}

package "Rental Transaction" {
  class Booking {
    -Integer bookingId
    -LocalDate startDate
    -LocalDate endDate
    -BigDecimal totalPrice
    -Status status
    -LocalDateTime createdAt
  }

  class Contract {
    -Integer contractId
    -String contractCode
    -LocalDate signedDate
    -String terms
  }

  class Payment {
    -Integer paymentId
    -BigDecimal amount
    -PaymentMethod method
    -LocalDateTime paymentTime
    -PaymentStatus status
  }

  class Insurance {
    -Integer insuranceId
    -String insuranceType
    -BigDecimal dailyFee
    -String coverageDetails
  }
}

package "Feedback & Logs" {
  class Review {
    -Integer reviewId
    -Integer rating
    -String comment
    -LocalDateTime createdAt
  }
}

Vehicle "*" -- "1" VehicleType : categorizes <
Vehicle "*" -- "1" Location : stays_at >
Vehicle "1" -- "*" MaintenanceLog : has >

Booking "*" -- "1" Customer : rented_by >
Booking "*" -- "1" Vehicle : contains >
Booking "*" -- "1" Location : pickup_from >
Booking "*" -- "1" Location : return_to >

Booking "1" -- "0..1" Contract : documented_in >
Booking "1" -- "*" Payment : involves >
Booking "*" -- "0..1" Insurance : covered_by >

Review "*" -- "1" Customer : written_by >
Review "*" -- "1" Vehicle : about >
@enduml
